--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <section id="hero" class="hero">
         <div class="container hero-container">
             <div class="hero-img-box">
-                <img src="image_5.png" alt="Profile Photo" class="profile-pic">
+                <img src="Profile.png" alt="Profile Photo" class="profile-pic">
             </div>
             
             <div class="hero-content">
@@ -628,3 +628,4 @@
     </script>
 </body>
 </html>
+
